--- a/src/main/resources/applicationTamplate.properties
+++ b/src/main/resources/applicationTamplate.properties
@@ -10,3 +10,7 @@
 # spring.servlet.multipart.max-file-size=10MB
 # spring.servlet.multipart.max-request-size=10MB
 # spring.servlet.multipart.location=
+
+#app config value
+# file_save_path=
+# list_allow_origin_url=https://
