--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ group = 'com.j'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+bootJar {
+	mainClassName = 'com.j.board.BoardApplication'
+	archiveBaseName = '0.0.1'
+	archiveFileName = 'build.jar'
+}
+
 repositories {
 	mavenCentral()
 }
@@ -22,5 +28,5 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	//implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation 'org.apache.logging.log4j:log4j:2.8.2'
 }
