--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.7.RELEASE'
+	id 'org.springframework.boot' version '2.2.8.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 }
 
 group = 'com.j'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+version = '0.0.2-SNAPSHOT'
 
 bootJar {
 	mainClassName = 'com.j.board.BoardApplication'
-	archiveBaseName = '0.0.1'
+	archiveBaseName = '0.0.2'
 	archiveFileName = 'build.jar'
+}
+
+bootRun {
+	String activeProfile = System.properties['spring.profiles.active']
+	systemProperty "spring.profiles.active", activeProfile
 }
 
 repositories {
@@ -19,14 +23,20 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'net.coobird:thumbnailator:0.4.8'
-	runtimeOnly 'mysql:mysql-connector-java'
+	implementation 'net.coobird:thumbnailator:0.4.11'
+	implementation 'org.apache.commons:commons-text:1.9'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.2'
+
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'org.apache.logging.log4j:log4j:2.8.2'
+
+//	implementation 'io.springfox:springfox-swagger2:2.9.2'
+//	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
